# GestureDetection-

./: .env.example  .gitignore  README.md  coletar_dados_maos.ipynb  main.py  pyproject.toml
data/: hand_landmarks_data.csv
notebooks/: classificar_imagens_timm2.ipynb  coletar_dados_maos.ipynb  coletar_dados_maos5.ipynb  deteccao_objetos_yolos3.ipynb  enviar_imagem1.ipynb  segmentacao_clipseg_v4.ipynb  webcam_detection_integrated.ipynb  webcam_detection_integrated6.ipynb
src/: classificar_gestos_webcam.py  treinar_modelo_gestos.py
tests/: test_mediapipe.py
tmp/: add_joblib.py  finalize_notebook.py  modify_notebook.py  test_paths.py  update_aliases.py
